force-app/main/default/objects/leaseworks__Lease_Options__c/leaseworks__Lease_Options__c.object-meta.xml
<CustomObject>
    <description>Reporting only. Record all potential lease options that the lessor offers, such as extension option, early termination option, etc. Include start and end dates for each option, along with the actual execution date if it has been exercised. This information is crucial for contract managers to stay on top of important deadlines and make informed decisions before options expire.
Reporting only. Record all potential lease options that the lessor offers, such as extension option, early termination option and etc. Include start and end dates for each option, along with the actual execution date if it has been exercised. This information is crucial for contract managers to stay on top of important deadlines and make informed decisions before options expire.
[MODULE: Contract]
[LOAD: Optional]
[PREREQUISITES: Lease]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Lease Option</label>
    <nameField>
        <label>Lease Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>