force-app/main/default/objects/leaseworks__Lease_Options__c/fields/Extension_Start_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>Extension_Start_Date_Local__c</fullName>
    <label>Extension Start Date</label>
    <type>Date</type>
</CustomField>