force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Exercised_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exercised_Date__c</fullName>
    <description>Date on which this lease option was exercised by the Lessee or Lessor(as applicable).This will mark this option as Exercised for reporting purposes.It was designed to capture a written notice date</description>
    <inlineHelpText>Date on which this lease option was exercised by the Lessee or Lessor(as applicable).This will mark this option as Exercised for reporting purposes.It was designed to capture a written notice date</inlineHelpText>
    <label>Exercised Date</label>
    <type>Date</type>
</CustomField>