force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Extension_Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Extension_Rent_Type__c</fullName>
    <description>Provide the information about the Rent Type applicable for the Renewed period</description>
    <inlineHelpText>Provide the information about the Rent Type applicable for the Renewed period</inlineHelpText>
    <label>Extension Rent Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>