force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Lease_End__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_End__c</fullName>
    <description>Lease End date as set on the Lease page</description>
    <formula>leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</formula>
    <inlineHelpText>Lease End date as set on the Lease page</inlineHelpText>
    <label>Lease End</label>
    <type>Date</type>
</CustomField>