force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Max_Extension_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Max_Extension_Months__c</fullName>
    <inlineHelpText>For information Only</inlineHelpText>
    <label>Max Extension (Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>