force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Notice_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notice_Period_Days__c</fullName>
    <description>Number of days of notice required before terminating the lease or returning the aircraft to the lessor</description>
    <inlineHelpText>Number of days of notice required before terminating the lease or returning the aircraft to the lessor</inlineHelpText>
    <label>Notice Period (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>