force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Option_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Option_Type__c</fullName>
    <description>Choose the Lease Option type from the list (purchase, termination, etc.) This can be customized as per the user requirements. Not used for any calculation</description>
    <inlineHelpText>Choose the Lease Option type from the list (purchase, termination, etc.) This can be customized as per the user requirements. Not used for any calculation</inlineHelpText>
    <label>Option Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Extension/Renewal</fullName>
            </value>
            <value>
                <fullName>Purchase (Put)</fullName>
            </value>
            <value>
                <fullName>Purchase (Call)</fullName>
            </value>
            <value>
                <fullName>Bargain Purchase</fullName>
            </value>
            <value>
                <fullName>Early Termination Option Lessor</fullName>
            </value>
            <value>
                <fullName>Early Termination Option Lessee</fullName>
            </value>
            <value>
                <fullName>Extension Option Lessee</fullName>
            </value>
            <value>
                <fullName>Extension Option Lessor</fullName>
            </value>
            <value>
                <fullName>Rollover Option Lessee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>