force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Renewal_Probability__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Renewal_Probability__c</fullName>
    <inlineHelpText>For information only</inlineHelpText>
    <label>Renewal Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Probable</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>