force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Return_Condition__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Return_Condition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Redelivery Conditions applicable if the option is exercised</description>
    <inlineHelpText>Redelivery Conditions applicable if the option is exercised</inlineHelpText>
    <label>Return Condition</label>
    <referenceTo>leaseworks__Component_Return_Condition__c</referenceTo>
    <relationshipLabel>Lease Options</relationshipLabel>
    <relationshipName>Lease_opotions</relationshipName>
    <type>Lookup</type>
</CustomField>