force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <description>Auto calculated field that reflects the status of the option:Exercised(if the Exercise Date is entered),Not Started or Expired(if Today is not in range of the Option Start/End dates),or Available(can be exercised Today)</description>
    <formula>IF(  NOT(ISNULL(leaseworks__Exercised_Date__c)),&quot;Exercised&quot;,
IF(  leaseworks__Option_Notice_Start__c &gt; TODAY(),&quot;Not Started&quot;,
IF ( leaseworks__Option_Notice_End__c &lt; TODAY(), &quot;Expired&quot;,&quot;Available&quot;)))</formula>
    <inlineHelpText>Auto calculated field that reflects the status of the option:Exercised(if the Exercise Date is entered),Not Started or Expired(if Today is not in range of the Option Start/End dates),or Available(can be exercised Today)</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>