force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Termination_Fee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Termination_Fee__c</fullName>
    <description>Information field only - currency field to capture the Fee that Lessee has to pay in case of Termination</description>
    <inlineHelpText>Information field only - currency field to capture the Fee that Lessee has to pay in case of Termination</inlineHelpText>
    <label>Termination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>