force-app/main/default/objects/leaseworks__Lease_Options__c/fields/leaseworks__Termination_Fee_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Termination_Fee_Due_Date__c</fullName>
    <description>Information field only -the last date of the Termination Fee payment in case Termination option was Exercised</description>
    <inlineHelpText>Information field only -the last date of the Termination Fee payment in case Termination option was Exercised</inlineHelpText>
    <label>Termination Fee Due Date</label>
    <type>Date</type>
</CustomField>