force-app/main/default/objects/leaseworks__Lease_Options__c/fields/pro_Days_From_Notice_Start__c.field-meta.xml
<CustomField>
    <fullName>pro_Days_From_Notice_Start__c</fullName>
    <description>Calculates the number of days between today and the start date for this Lease Option.</description>
    <formula>leaseworks__Option_Notice_Start__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Notice Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>