force-app/main/default/objects/leaseworks__Lease_Options__c/fields/pro_Days_Until_Notice_End__c.field-meta.xml
<CustomField>
    <fullName>pro_Days_Until_Notice_End__c</fullName>
    <description>Calculates the number of days between today and the option/notice start.</description>
    <formula>leaseworks__Option_Notice_End__c - Today()</formula>
    <label>Days Until Notice End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>