force-app/main/default/objects/leaseworks__Lease_Options__c/recordTypes/leaseworks__Extension.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Extension</fullName>
    <active>true</active>
    <label>Extension</label>
</RecordType>