force-app/main/default/objects/leaseworks__Lease_Options__c/recordTypes/leaseworks__Termination.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Termination</fullName>
    <active>true</active>
    <label>Termination</label>
</RecordType>