force-app/main/default/objects/leaseworks__Lease_Options__c/recordTypes/Rollover.recordType-meta.xml
<RecordType>
    <fullName>Rollover</fullName>
    <active>true</active>
    <label>Rollover</label>
</RecordType>