force-app/main/default/objects/leaseworks__Lease_Options__c/validationRules/leaseworks__Min_Max_Extensions.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Min_Max_Extensions</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Min_Extension_Months__c &gt; leaseworks__Max_Extension_Months__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Min_Extension_Months__c</errorDisplayField>
    <errorMessage>Minimum Extension Months cannot be higher than Maximum Extension Months</errorMessage>
</ValidationRule>