force-app/main/default/objects/leaseworks__Lease_Options__c/validationRules/leaseworks__Notice_Period_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Notice_Period_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(TEXT( leaseworks__Notice_Period_Days__c ), &quot;[0-9]+[.]{1}[0-9]{1,}&quot;)</errorConditionFormula>
    <errorDisplayField>leaseworks__Notice_Period_Days__c</errorDisplayField>
    <errorMessage>Please enter valid number</errorMessage>
</ValidationRule>