force-app/main/default/objects/leaseworks__Lease_Options__c/validationRules/leaseworks__Notice_Period_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Notice_Period_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>OR(leaseworks__Notice_Period_Days__c  &lt; 0,leaseworks__Notice_Period_Days__c &gt; 9999)</errorConditionFormula>
    <errorDisplayField>leaseworks__Notice_Period_Days__c</errorDisplayField>
    <errorMessage>Value outside of Valid range on numeric field</errorMessage>
</ValidationRule>