force-app/main/default/objects/leaseworks__Lease_Options__c/validationRules/leaseworks__Option_Notice_Start_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Option_Notice_Start_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Option_Notice_Start__c &gt;  leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Option_Notice_Start__c</errorDisplayField>
    <errorMessage>Please enter valid date Option/Notice Start cannot be more than Lease End Date</errorMessage>
</ValidationRule>