force-app/main/default/objects/leaseworks__Lease_Options__c/validationRules/leaseworks__Option_Start_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Option_Start_and_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Option_Notice_Start__c &gt; leaseworks__Option_Notice_End__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Option_Notice_Start__c</errorDisplayField>
    <errorMessage>Option/Notice Start cannot be later than Option/Notice End</errorMessage>
</ValidationRule>